@@ -444,6 +444,7 @@ struct drumkv1_dyn
 struct drumkv1_rev
 {
 	float *wet;
+	float *feedb;
 	float *room;
 	float *damp;
 	float *width;
@@ -1153,6 +1154,7 @@ void drumkv1_impl::setParamPort ( drumkv1::ParamIndex index, float *pfParam )
 	case drumkv1::DYN1_COMPRESS:  m_dyn.compress  = pfParam; break;
 	case drumkv1::DYN1_LIMITER:   m_dyn.limiter   = pfParam; break;
 	case drumkv1::REV1_WET:       m_rev.wet       = pfParam; break;
+	case drumkv1::REV1_FEEDB:     m_rev.feedb     = pfParam; break;
 	case drumkv1::REV1_ROOM:      m_rev.room      = pfParam; break;
 	case drumkv1::REV1_DAMP:      m_rev.damp      = pfParam; break;
 	case drumkv1::REV1_WIDTH:     m_rev.width     = pfParam; break;
@@ -1200,6 +1202,7 @@ float *drumkv1_impl::paramPort ( drumkv1::ParamIndex index )
 	case drumkv1::DYN1_COMPRESS:  pfParam = m_dyn.compress;  break;
 	case drumkv1::DYN1_LIMITER:   pfParam = m_dyn.limiter;   break;
 	case drumkv1::REV1_WET:       pfParam = m_rev.wet;       break;
+	case drumkv1::REV1_FEEDB:     pfParam = m_rev.feedb;     break;
 	case drumkv1::REV1_ROOM:      pfParam = m_rev.room;      break;
 	case drumkv1::REV1_DAMP:      pfParam = m_rev.damp;      break;
 	case drumkv1::REV1_WIDTH:     pfParam = m_rev.width;     break;
@@ -1689,7 +1692,7 @@ void drumkv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 		// reverb
 		if (k > 0) {
 			m_reverb.process(outs[k - 1], outs[k], nframes, *m_rev.wet,
-				*m_rev.room, *m_rev.damp, *m_rev.width);
+				*m_rev.feedb, *m_rev.room, *m_rev.damp, *m_rev.width);
 		}
 	}
 
