@@ -135,6 +135,7 @@ public:
 		DYN1_COMPRESS,
 		DYN1_LIMITER,
 		REV1_WET,
+		REV1_FEEDB,
 		REV1_ROOM,
 		REV1_DAMP,
 		REV1_WIDTH,
